# Uni_Work

./: README.md
Fourth_Year/Advanced Databases/: Readme.md
Fourth_Year/Image Processing/: Readme.md
Fourth_Year/Image Processing/P3/: P3_code.ipynb
Fourth_Year/Machine Learning/: Readme.md
Fourth_Year/Machine Learning/Code/: P1_Code.ipynb  P2_Code.ipynb  P3_Code.ipynb  P4_Code.ipynb
Fourth_Year/Software Engineering/: Readme.md
Fourth_Year/Software Engineering/Full-stack code/: .gitignore  README.md
Second_Year/Embedded_system_in_c/Project_code/: lib_p4_robot.c  lib_p4_robot.h  main.c
Third_year/Distributed_Client_Server_Game/: .gitignore  Project_report.md  README.md  TestReport.md
Third_year/Full-Stack_Vue_and_Django_Game/: README.md  package-lock.json
Third_year/Globe_gl/: README.md  index.html  style copy.css  style.css  util.js
Third_year/Globe_gl/code/: Project_Report.md  areaSinCambioGUI.html  index copy 2.html  util copy.js  (+1 more)
Third_year/Raytracing/: README.md
Third_year/Raytracing/code/: .gitignore  CMakeLists.txt  Project_report.md  imgui.ini
Third_year/Raytracing/code/include/: Camera.hpp  Controller.hpp  World.hpp
Third_year/Raytracing/code/include/GeometricObjects/: ObjectFactory.hpp  Plane.hpp  Scene.hpp
Third_year/Raytracing/code/include/Lights/: Light.hpp  PointLight.hpp
Third_year/Raytracing/code/include/Materials/: Material.hpp  MaterialFactory.hpp  MaterialTextura.hpp  Transp.hpp
Third_year/Raytracing/code/include/Renders/: Pathtracing.hpp  Raycasting.hpp  Raytracing.hpp  Render.hpp
Third_year/Raytracing/code/include/Shaders/: BlinnPhongShading.hpp  DiffuseShading.hpp  NormalShading.hpp  ShadingFactory.hpp
Third_year/Raytracing/code/include/Utilities/: Ray.hpp  ShadeInfo.hpp
Third_year/Raytracing/code/src/: Camera.cpp  Controller.cpp  GUITracerToy.cpp
Third_year/Raytracing/code/src/GeometricObjects/: Object.cpp  Scene.cpp
Third_year/Raytracing/code/src/Lights/: PointLight.cpp
Third_year/Raytracing/code/src/Materials/: Lambertian.cpp  Metal.cpp  Transp.cpp
Third_year/Raytracing/code/src/Renders/: Raytracing.cpp  examen.cpp
Third_year/Raytracing/code/src/Shaders/: BlinnPhongShading.cpp  DiffuseShading.cpp
Third_year/Reinforcement_Learning_with_Q-Learning/: README.md
Third_year/User_centered_design_web/: README.md  contacte.html  inici.html  perfil.html
Third_year/Z-Buffering/: GLWidget.cpp  GPUConfig.hpp  GPUWorld.hpp  GUIRenderToy.cpp  Project_report.md  README.md
(+392 files in other folders)
